feat: start laba 3, crud fixed and stable