@@ -1,8 +1,6 @@
 package com.office.employeemanagement.service;
 
 import com.office.employeemanagement.dto.EmployeeDto;
-import com.office.employeemanagement.exception.TransactionTestException;
-import com.office.employeemanagement.mapper.EmployeeMapper;
 import com.office.employeemanagement.model.Employee;
 import com.office.employeemanagement.model.EmployeeProfile;
 import com.office.employeemanagement.model.Task;
@@ -13,8 +11,10 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,54 +23,82 @@ public class EmployeeService {
     private final DepartmentRepository departmentRepository;
     private final TaskRepository taskRepository;
 
-    @Transactional
-    public EmployeeDto createEmployee(EmployeeDto dto) {
-        Employee employee = new Employee();
-        employee.setFirstName(dto.getFirstName());
-        employee.setLastName(dto.getLastName());
-
-        EmployeeProfile profile = new EmployeeProfile();
-        profile.setBio(dto.getBio());
-        employee.setProfile(profile);
-
-        if (dto.getDepartmentId() != null) {
-            departmentRepository.findById(dto.getDepartmentId())
-                    .ifPresent(employee::setDepartment);
-        }
-
-        if (dto.getTaskIds() != null && !dto.getTaskIds().isEmpty()) {
-            List<Task> tasks = taskRepository.findAllById(dto.getTaskIds());
-            employee.setTasks(new HashSet<>(tasks));
-        }
-
-        return EmployeeMapper.toDto(employeeRepository.save(employee));
-    }
-
-    @Transactional
-    public EmployeeDto saveWithTransactionCheck(EmployeeDto dto) {
-        EmployeeDto savedDto = createEmployee(dto);
-        if ("error".equalsIgnoreCase(dto.getFirstName())) {
-            throw new TransactionTestException("Тестовая ошибка для проверки транзакции");
-        }
-        return savedDto;
-    }
-
     @Transactional(readOnly = true)
-    public List<EmployeeDto> getAllEmployees() {
+    public List<EmployeeDto> getAll() {
         return employeeRepository.findAll().stream()
-                .map(EmployeeMapper::toDto)
-                .toList();
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
-    public EmployeeDto getEmployeeById(Long id) {
+    public EmployeeDto getById(Long id) {
         return employeeRepository.findById(id)
-                .map(EmployeeMapper::toDto)
-                .orElseThrow(() -> new RuntimeException("Employee not found"));
+                .map(this::convertToDto)
+                .orElseThrow(() -> new RuntimeException("Employee not found with id: " + id));
     }
 
     @Transactional
-    public void deleteEmployee(Long id) {
+    public EmployeeDto create(EmployeeDto dto) {
+        Employee employee = new Employee();
+        mapDtoToEntity(employee, dto);
+        return convertToDto(employeeRepository.save(employee));
+    }
+
+    @Transactional
+    public EmployeeDto update(Long id, EmployeeDto dto) {
+        Employee employee = employeeRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Employee not found"));
+        mapDtoToEntity(employee, dto);
+        return convertToDto(employee);
+    }
+
+    @Transactional
+    public void delete(Long id) {
         employeeRepository.deleteById(id);
+    }
+
+    private void mapDtoToEntity(Employee employee, EmployeeDto dto) {
+        employee.setFirstName(dto.firstName());
+        employee.setLastName(dto.lastName());
+
+        EmployeeProfile profile = employee.getProfile();
+        if (profile == null) {
+            profile = new EmployeeProfile();
+            employee.setProfile(profile);
+        }
+        profile.setBio(dto.bio());
+        profile.setPhoneNumber(dto.phoneNumber());
+
+        if (dto.departmentId() != null) {
+            departmentRepository.findById(dto.departmentId()).ifPresent(employee::setDepartment);
+        }
+
+        if (dto.taskIds() != null) {
+            List<Task> tasksList = taskRepository.findAllById(dto.taskIds());
+            employee.setTasks(new HashSet<>(tasksList));
+        }
+    }
+
+    private EmployeeDto convertToDto(Employee employee) {
+        String bio = (employee.getProfile() != null) ? employee.getProfile().getBio() : "No bio";
+        String phone = (employee.getProfile() != null) ? employee.getProfile().getPhoneNumber() : "No phone";
+
+        Long deptId = (employee.getDepartment() != null) ? employee.getDepartment().getId() : null;
+        String deptName = (employee.getDepartment() != null) ? employee.getDepartment().getName() : "Unassigned";
+
+        List<Long> taskIds = (employee.getTasks() != null)
+                ? employee.getTasks().stream().map(Task::getId).collect(Collectors.toList())
+                : Collections.emptyList();
+
+        return new EmployeeDto(
+                employee.getId(),
+                employee.getFirstName(),
+                employee.getLastName(),
+                bio,
+                phone,
+                deptId,
+                deptName,
+                taskIds
+        );
     }
 }
