@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,21 +21,49 @@ public class TaskService {
     public List<TaskDto> getAll() {
         return taskRepository.findAll().stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Transactional(readOnly = true)
+    public TaskDto getById(Long id) {
+        Task task = taskRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Task not found"));
+        return convertToDto(task);
     }
 
     @Transactional
     public TaskDto create(TaskDto dto) {
         Task task = new Task();
+        updateTaskFromDto(task, dto);
+        return convertToDto(taskRepository.save(task));
+    }
+
+    @Transactional
+    public TaskDto update(Long id, TaskDto dto) {
+        Task task = taskRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Task not found"));
+        updateTaskFromDto(task, dto);
+        return convertToDto(task);
+    }
+
+    @Transactional
+    public void delete(Long id) {
+        if (!taskRepository.existsById(id)) {
+            throw new RuntimeException("Task not found");
+        }
+
+        taskRepository.deleteFromEmployeeTasks(id);
+
+        taskRepository.deleteById(id);
+    }
+
+    private void updateTaskFromDto(Task task, TaskDto dto) {
         task.setTitle(dto.title());
         task.setDescription(dto.description());
         task.setStatus(dto.status() != null ? dto.status() : TaskStatus.TODO);
-
         if (dto.projectId() != null) {
             projectRepository.findById(dto.projectId()).ifPresent(task::setProject);
         }
-
-        return convertToDto(taskRepository.save(task));
     }
 
     private TaskDto convertToDto(Task task) {
